# StoreSystem

./: .gitignore  LICENSE  README.md  deploy-web.sh  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  package.json  print-template.html  tsconfig.node.tsbuildinfo  tsconfig.web.tsbuildinfo  vite.web.config.ts
.claude/: launch.json  settings.local.json
Server/: add_old_prods.py  analytics.py  auth.py  employee.py  fill_mock.py  init.py  installment.py  main.py  parties.py  requirements.txt  reset_db.py  (+4 more)
server/: Dockerfile  Dockerfile.whatsapp  MANIFEST.in  README.md  WHATSAPP_SERVICE.md  __init__.py  accounts.py  analytics.py  analytics_utils.py  auth.py  auth_middleware.py  backup1.sql  batches.py  correct_from_csv.py  db_full_reset.py  detailed_analytics.py  docker-compose.truenas.yml  docker-compose.yml  employee.py  expiration_scheduler.py  fix_cash_flow.py  init.py  installment.py  main.py  main_wrapper.py  ml_utils.py  notifications.py  parties.py  payment_methods.py  product_requests.py  pyproject.toml  requirements.txt  reset_db.py  reset_triggers.py  settings.py  setup.py  start_server.bat  start_server_ssl.bat  telegram.py  telegram_commands.py  (+31 more)
server/.wwebjs_cache/: 2.3000.1023379426.html
server/tests/: conftest.py  pytest.ini  test_analytics.py  test_auth.py  test_employees.py  test_installments.py  test_main.py  test_parties.py  test_requirements.txt  test_settings.py
server/whatsapp_utils/: package.json  test_service.js  whatsapp_handler.js  whatsapp_service.js
server/whatsapp_utils/.wwebjs_cache/: 2.3000.1023379426.html
(+244 files in other folders)
